# temperature-collector

./: flake.nix
collector/: Cargo.toml
collector/migrations/: V1__initial.sql  V2__sensors.sql  V3__temperature_numeric.sql  V4__temperature.sql
collector/src/: main.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: aht10.rs  analog.rs  ds18b20.rs  lib.rs  main.rs  measurements.rs  status_led.rs  tmp36.rs  transmit.rs
