[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
clap = { version = "4.4.2", features = ["derive"] }
deadpool = "0.9.5"
deadpool-postgres = "0.10.5"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-postgres = "0.7.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
