[package]
name = "temperature-firmware"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0", features = ["embassy-time-timg0", "async"]}
# defmt-rtt = "0.4.0"
# defmt = "0.3.5"
critical-section = "1.1.2"
embassy-executor = { version = "0.2.0", features = ["executor-thread", "arch-riscv32", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.1", features = [] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = ["esp32c3", "wifi", "embedded-svc", "embassy-net"]}
embedded-svc = { version = "0.25.3", default-features = false }
embassy-net = { version = "0.1.0", features = ["tcp", "medium-ethernet", "dhcpv4", "nightly"] }
smoltcp = { version = "0.9.1", default-features = false, features = ["proto-ipv4", "socket-tcp", "socket-udp", "medium-ip"] }
embassy-sync = "0.2.0"
embedded-io = "0.4.0"
esp-println = { version = "0.6.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "print-uart", "panic-handler"] }
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.1"
arrayvec = { version = "0.7.4", default-features = false }

[profile.dev]
opt-level = 2

[patch.crates-io]
esp32c3-hal = { git = "https://github.com/jneem/esp-hal", branch = "sleep" }
esp-hal-common = { git = "https://github.com/jneem/esp-hal", branch = "sleep" }
