[package]
name = "temperature-firmware"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
battery = []
status-led = []
default = []

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0", features = ["embassy-time-timg0", "async", "embassy"]}
# defmt-rtt = "0.4.0"
# defmt = "0.3.5"
critical-section = "1.1.2"
# 0.3.3 requires portable-atomic
embassy-executor = { version = "=0.3.2", features = ["executor-thread", "arch-riscv32", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.1", features = ["nightly", "unstable-traits"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = ["esp32c3", "wifi", "embedded-svc", "embassy-net"]}
embedded-svc = { version = "0.26.4", default-features = false }
embassy-net = { version = "0.2.1", features = ["tcp", "medium-ethernet", "dhcpv4", "nightly", "dns"] }
smoltcp = { version = "0.10.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "socket-udp", "medium-ip"] }
embassy-sync = "0.4.0"
embedded-io = "0.6.0"
esp-println = { version = "0.7.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "print-uart", "panic-handler"] }
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.1"
arrayvec = { version = "0.7.4", default-features = false }
fixed = "1.24.0"
time = { version = "0.3.29", default-features = false }
embedded-io-async = "0.6.0"
static_cell = "=1.2.0"
esp-hal-common = "0.13.1"
espilepsy = "0.1.2"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"
aht10-async = "0.0.1"
#portable-atomic = { version = "1.5.1", features = ["critical-section"] }

[profile.dev]
opt-level = 2

#[patch.crates-io]
# The last release of embedded-svc has a non-optional dep on atomic-waker, which triggers the atomicopalypse
#embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
