[package]
name = "temperature-firmware"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
battery = []
status-led = []
activate-pin-0 = []
default = []

[dependencies]
hal = { package = "esp-hal", version = "0.17.0", features = ["embassy-time-timg0", "embassy-executor-thread", "async", "embassy", "esp32c3"]}
# defmt-rtt = "0.4.0"
# defmt = "0.3.5"
critical-section = "1.1.2"
embassy-executor = { version = "0.5.0", features = ["arch-riscv32", "nightly", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
esp-wifi = { version = "0.5.1", features = ["esp32c3", "wifi", "embedded-svc", "embassy-net", "tcp"]}
embedded-svc = { version = "0.26.4", default-features = false }
embassy-net = { version = "0.4.0", features = ["tcp", "medium-ethernet", "dhcpv4", "dns"] }
smoltcp = { version = "0.10.0", default-features = false, features = ["proto-dns", "proto-ipv4", "socket-tcp", "socket-udp", "medium-ip"] }
embassy-sync = "0.4.0"
embedded-io = "0.6.0"
esp-println = { version = "0.7.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "print-uart", "panic-handler"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
arrayvec = { version = "0.7.4", default-features = false }
fixed = "1.24.0"
time = { version = "0.3.29", default-features = false }
embedded-io-async = "0.6.0"
static_cell = "=1.2.0"
espilepsy = "0.3.0"
# These need updating to embedded-hal 1.0
#ds18b20 = "0.1.1"
#one-wire-bus = "0.1.1"
aht10-async = "0.1.0"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

# If esp-hal detects debug-assertions, it complains that you're supposed to
# compile it in release mode. Disable that complaint, because we've turned on
# optimizations in dev mode already.
[profile.dev.package.esp-hal]
debug-assertions = false
